--- a/languages.yaml
+++ b/languages.yaml
@@ -2,6 +2,10 @@ en:
   PLUGIN_ERROR:
     ERROR: "Error"
     ERROR_MESSAGE: "Woops. Looks like this page doesn't exist."
+efr:
+  PLUGIN_ERROR:
+    ERROR: "Erreur"
+    ERROR_MESSAGE: "Oups. Il semble que cette page n'existe pas."
 it:
   PLUGIN_ERROR:
     ERROR: "Errore"
